# hexa-bio

./: .gitignore  .own  .roadmap.ai_ml_integration  .roadmap.axis_bio_evolution_exploration  .roadmap.axis_consciousness_exploration  .roadmap.axis_expansion_decision_2026_05_08  .roadmap.bioethics_framework  .roadmap.clinical_translation_pathway  .roadmap.disease_acne_specific  .roadmap.disease_acromegaly_specific  .roadmap.disease_acute_pain_specific  .roadmap.disease_adc  .roadmap.disease_adhd_specific  .roadmap.disease_adolescent  .roadmap.disease_aesthetic_dermatology  .roadmap.disease_aging  .roadmap.disease_ai_drug_discovery  .roadmap.disease_alopecia  .roadmap.disease_als_specific  .roadmap.disease_aml_specific  .roadmap.disease_anesthesiology  .roadmap.disease_asd_specific  .roadmap.disease_asthma_specific  .roadmap.disease_atopic_dermatitis_specific  .roadmap.disease_atrial_fibrillation_specific  .roadmap.disease_autoimmune  .roadmap.disease_behavioral_addiction  .roadmap.disease_behcet_specific  .roadmap.disease_bioethics  .roadmap.disease_bipolar_disorder_specific  .roadmap.disease_bladder_cancer_specific  .roadmap.disease_brain_organoid  .roadmap.disease_breast_cancer_specific  .roadmap.disease_cancer  .roadmap.disease_cardiac_amyloidosis_specific  .roadmap.disease_cardiac_arrhythmia_extended  .roadmap.disease_cardiology  .roadmap.disease_cell_therapy_platform  .roadmap.disease_cervical_uterine_cancer_specific  .roadmap.disease_chronic_cough_specific  (+345 more)
AXIS/: HIERARCHY.tape  INDEX.md  README.md  (+2 more)
_absorption_bridge/: README.md  pyproject.toml
_absorption_bridge/alphafold3/: SOURCES.md  af3_smoke.py
_absorption_bridge/alphafold3/cache/: sample_prediction.json
_absorption_bridge/colabfold/: SOURCES.md  colabfold_smoke.py
_absorption_bridge/colabfold/cache/: sample_prediction.json
_absorption_bridge/esmfold/: SOURCES.md  esmfold_smoke.py
_absorption_bridge/esmfold/cache/: sample_prediction.json
_absorption_bridge/foldseek/: SOURCES.md  foldseek_smoke.py
_absorption_bridge/foldseek/cache/: sample_alignment.json
_absorption_bridge/mmseqs/: SOURCES.md  mmseqs_smoke.py
_absorption_bridge/mmseqs/cache/: sample_alignment.json
_absorption_bridge/openfold/: SOURCES.md  openfold_smoke.py
_absorption_bridge/openfold/cache/: sample_prediction.json
_absorption_bridge/pdb/: SOURCES.md  pdb_api_smoke.py
_absorption_bridge/pdb/cache/: sample_entry.json
_absorption_bridge/rosettafold/: SOURCES.md  rosettafold_smoke.py
_absorption_bridge/selftest/: alphafold3_smoke.py  colabfold_smoke.py  esmfold_smoke.py  foldseek_smoke.py  mmseqs_smoke.py  openfold_smoke.py  pdb_smoke.py  rosettafold_smoke.py  run_all.sh  sources_audit.py  uniprot_smoke.py
_absorption_bridge/uniprot/: SOURCES.md  uniprot_api_smoke.py
(+568 files in other folders)
