# pyproject.toml — hexa-bio cycle-30++++++++ absorption bridge optional deps
#
# Backported 2026-05-13 from hexa-matter Phase G `_absorption_bridge/`
# (commit e712068). External protein-structure ML + sequence absorption.
#
# Each adapter under <system>/<system>_*.py is callable directly with
# `--selftest`; optional deps (requests / biopython / mdanalysis / torch
# / transformers) gate compute paths and fall back to stdlib SKIP cleanly
# when missing.
#
# Install all optional deps:
#     pip install -e ".[all]"
#
# Install per-bucket:
#     pip install -e ".[rest_api]"       # requests           (UniProt + PDB live paths)
#     pip install -e ".[bio_io]"         # biopython + mdanalysis (PDB / mmCIF I/O)
#     pip install -e ".[fold_runtime]"   # torch + transformers (ESMFold runtime, OpenFold)
#
# Stdlib-only fallback is honored in every adapter. A module SKIPs cleanly
# when its optional dep is missing — the harness counts SKIP as PASS.
#
# Honest C3 (per AGENTS.md / LATTICE_POLICY.md):
#   - AlphaFold-3 is NON-COMMERCIAL RESEARCH ONLY. There is no `pip
#     install alphafold3-weights`; the af3_smoke adapter validates the
#     schema of a bundled fixture only. Live use requires manual download
#     of weights from DeepMind's gated release, separate from this bridge.
#   - RoseTTAFold has no general-purpose PyPI distribution either; the
#     adapter is a schema-replay smoke.
#   - Foldseek / MMseqs2 are CLI binaries, not Python libraries; the
#     adapters parse their M8 tab-output format from the bundled fixture.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexa-bio-absorption-bridge"
version = "0.1.0"
description = "External protein-structure ML + sequence absorption bridge for hexa-bio (AlphaFold-3 / RoseTTAFold / ESMFold / OpenFold / ColabFold / Foldseek / MMseqs2 / UniProt / PDB)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "박민우", email = "nerve011235@gmail.com" },
]
keywords = [
    "protein-structure",
    "absorption-bridge",
    "alphafold3",
    "rosettafold",
    "esmfold",
    "openfold",
    "colabfold",
    "foldseek",
    "mmseqs2",
    "uniprot",
    "pdb",
    "hexa-family",
]

[project.optional-dependencies]
rest_api = ["requests>=2.31.0"]
bio_io = ["biopython>=1.83", "mdanalysis>=2.7.0"]
fold_runtime = [
    "torch>=2.0.0",
    "transformers>=4.40.0",  # ESMFold via HuggingFace
]
all = [
    "requests>=2.31.0",
    "biopython>=1.83",
    "mdanalysis>=2.7.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]

[tool.setuptools]
packages = []
